--- a/Capstone/spacex-eda-dataviz.ipynb
+++ b/Capstone/spacex-eda-dataviz.ipynb
@@ -467,6 +467,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "KSC LC 39A launch site have high success rate as per the scatter plot. CCAFS SLC 40 site had high rate of failture for initial flights."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### TASK 2: Visualize the relationship between Payload and Launch Site\n"
    ]
   },
@@ -522,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now if you observe Payload Vs. Launch Site scatter point chart you will find for the VAFB-SLC  launchsite there are no  rockets  launched for  heavypayload mass(greater than 10000).\n"
+    "Payload Vs. Launch Site scatter point chart shows that for VAFB-SLC launch site there are no rockets launched for heavy payload mass (greater than 10000). Also, CCAFS SLC site have more flights with heavy payload."
    ]
   },
   {
@@ -579,10 +586,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyze the ploted bar chart try to find which orbits have high sucess rate.\n"
+    "Analyze the ploted bar chart try to find which orbits have high sucess rate. <br>\n",
+    "ES-L1, GEO, HEO and SSO have high success rates while GTO have lowest success rate of launch"
    ]
   },
   {
@@ -634,7 +643,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see that in the LEO orbit the Success appears related to the number of flights; on the other hand, there seems to be no relationship between flight number when in GTO orbit.\n"
+    "As per above chart, in the LEO orbit the Success appears related to the number of flights; on the other hand, there seems to be no relationship between flight number when in GTO orbit.\n"
    ]
   },
   {
@@ -683,14 +692,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With heavy payloads the successful landing or positive landing rate are more for Polar,LEO and ISS.   \n",
+    "As per chart between payload and orbit type, successful landing rate is more for Polar, LEO and ISS with heavy payloads.\n",
     "\n",
-    "However for GTO we cannot distinguish this well as both positive landing rate and negative landing(unsuccessful mission) are both there here.\n",
-    "\n",
-    "\n"
+    "However for GTO, cannot distinguish this well as both positive landing rate and negative landing are there.\r\n"
    ]
   },
   {
@@ -964,7 +972,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can observe that the success rate since 2013 kept increasing till 2017 (stable in 2014) and after 2015 it started increasing.\n"
+    "As per above chart, the success rate since 2013 kept increasing till 2017. it was stable in 2014 and after 2015 it started increasing."
    ]
   },
   {
